deploy/wireflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireflow-control
  namespace: wireflow
  labels:
    k8s-app: wireflow-control
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: wireflow-control
  template:
    metadata:
      labels:
        k8s-app: wireflow-control
    spec:
#      imagePullSecrets:
#        - name: ali-registry
      serviceAccountName: wireflow-controller-admin
      containers:
        - name: wireflow-control
          image: controller:latest
          imagePullPolicy: Always
          command: [ "wireflow", "manager" ]
          args:
            - "--log-level=INFO"
          volumeMounts:
            - mountPath: /app/control.yaml
              name: conf
              subPath: control.yaml
      volumes:
        - name: conf
          configMap:
            name: wireflow-control-config
            items:
              - key: control.yaml
                path: control.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireflow-signaling
  namespace: wireflow
  labels:
    k8s-app: wireflow-signaling
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: wireflow-signaling
  template:
    metadata:
      labels:
        k8s-app: wireflow-signaling
    spec:
      imagePullSecrets:
        - name: ali-registry
      hostAliases:
        - ip: "10.96.98.115"
          hostnames:
            - "console.wireflow.io"
      containers:
        - name: wireflow-signaling
          image: registry.cn-hangzhou.aliyuncs.com/wireflow-io/wireflow:latest
          imagePullPolicy: Always
          command: [ "wireflow", "signaling" ]
          args:
            - "--log-level=verbose"
---
apiVersion: v1
kind: Service
metadata:
  name: wireflow-signaling-svc
  namespace: wireflow
spec:
  ports:
    - protocol: TCP
      port: 32132
      targetPort: 32132
      nodePort: 32132
  selector:
    k8s-app: wireflow-signaling
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireflow-turn
  namespace: wireflow
  labels:
    k8s-app: wireflow-turn
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: wireflow-turn
  template:
    metadata:
      labels:
        k8s-app: wireflow-turn
    spec:
      imagePullSecrets:
        - name: ali-registry
      hostAliases:
        - ip: "10.96.80.105"
          hostnames:
            - "console.wireflow.io"
      containers:
        - name: wireflow-turn
          image: registry.cn-hangzhou.aliyuncs.com/wireflow-io/wireflow:latest
          imagePullPolicy: Always
          command: [ "wireflow", "turn" ]
